--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,9 +12,8 @@ layout: default
 
   {% if page.tags %}
   <span class="post-tags">
-  Tags:
   {% assign sorted_tags = page.tags | sort %}
-  {% for tag in sorted_tags %}{% if forloop.index0 > 0 %},{% endif %} <a href="/tags/#{{ tag | slugify }}">{{ tag }}</a>{% endfor %}
+  {% for tag in sorted_tags %}{% if forloop.index0 > 0 %},{% endif %} <a href="/tags/#{{ tag | slugify }}">#{{ tag }}</a>{% endfor %}
   </span>
   {% endif %}
 
