minor style change

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -6,7 +6,7 @@
 .pagination {
   overflow: hidden; // clearfix
   margin: 0 -1.5rem 1rem;
-  color: #ccc;
+  color: $gray-3;
   text-align: center;
 }
 
