--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -5,12 +5,10 @@
 
 .page,
 .post {
-  margin-bottom: 4rem;
-  border: 1px solid #ddd;
-  border-radius: 3px;
-
   padding: 3rem;
   margin: -3rem;
+  margin-bottom: 6rem;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 
   li + li {
     margin-top: .25rem;
