--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -39,9 +39,9 @@
 
 // Related posts
 .related {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  margin-bottom: 2rem;
+  //padding-top: 2rem;
+  //padding-bottom: 2rem;
+  //margin-bottom: 2rem;
   //border-top: 1px solid #eee;
   //border-bottom: 1px solid #eee;
 }
