--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,6 +1,38 @@
-// Body resets
-//
-// Update the foundational and global aspects of the page.
+// Variables used in other .scss files
+
+$gray-1: #f9f9f9;
+$gray-2: #ccc;
+$gray-3: #767676;
+$gray-4: #515151;
+$gray-5: #313131;
+
+$red: #ac4142;
+$orange: #d28445;
+$yellow: #f4bf75;
+$green: #90a959;
+$cyan: #75b5aa;
+$blue: #268bd2;
+$brown: #8f5536;
+
+$root-font-family: "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+$root-font-size: 1rem;
+$root-line-height: 1.5;
+
+$body-color: #515151;
+$body-bg: #fff;
+$link-color: $blue;
+$link-visited-color: #7e2dc7;
+
+$border-color: #e5e5e5;
+
+$large-breakpoint: 57rem;
+$large-font-size: 1rem;;
+
+$code-font-family: Consolas, Monaco, 'Andale Mono', monospace;
+$code-color: #bf616a;
+$code-font-size: 0.9rem;
+
+// Base settings
 
 * {
   -webkit-box-sizing: border-box;
@@ -31,7 +63,20 @@ body {
       -ms-text-size-adjust: 100%;
 }
 
-// No `:visited` state is required by default (browsers will use `a`)
+.container {
+  max-width: $large-breakpoint;
+  margin-left:  auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+footer {
+  margin-top: 5rem;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
 a {
   color: $link-color;
   text-decoration: none;
@@ -44,6 +89,10 @@ a {
 
   strong {
     color: inherit;
+  }
+
+  &:visited {
+    color: $link-visited-color;
   }
 }
 
