--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -7,25 +7,28 @@ code,
 pre {
   font-family: $code-font-family;
   overflow-x: auto;
+  word-spacing: normal;
+  word-break: normal;
+  font-size: $code-font-size;
 }
 
-code {
-  padding: .25em .5em;
+:not(pre)>code {
   color: $code-color;
-  background-color: #f9f9f9;
+  vertical-align: middle;
+  background: rgba(238,238,238,.35);
   border-radius: 3px;
+  padding: 1px 5px;
+  box-shadow: 0 1px 1px rgba(0,0,0,.125);
 }
 
 pre {
   margin-top: 0;
   margin-bottom: 1rem;
-}
 
-pre code {
-  padding: 0;
-  font-size: 100%;
-  color: inherit;
-  background-color: transparent;
+  background: rgba(238,238,238,.35);
+  border-radius: 3px;
+  padding: 10px;
+  box-shadow: 0 1px 1px rgba(0,0,0,.125);
 }
 
 // Pygments via Jekyll
