add post ggplot2-color-by-density

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -32,6 +32,7 @@ pre {
 }
 
 // Pygments via Jekyll
+/*
 .highlight {
   padding: 1rem;
   margin-bottom: 1rem;
@@ -55,6 +56,7 @@ pre {
             user-select: none;
   }
 }
+*/
 
 kbd {
   display: inline-block;
