--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,7 +19,7 @@ $root-font-size: 1rem;
 $root-line-height: 1.5;
 
 $body-color: #515151;
-$body-bg: #fff;
+$body-bg: #f9f9f9;
 $link-color: $blue;
 $link-visited-color: #7e2dc7;
 
@@ -58,7 +58,9 @@ html {
 
 body {
   color: $body-color;
-  background-color: $body-bg;
+  background-image: url("public/images/fabric_plaid/fabric_plaid.png");
+  //background-color: $body-bg;
+  //background: linear-gradient(to bottom right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -109,6 +111,7 @@ img {
 .headshot {
   border-radius: 200px;
   margin-bottom: 2rem;
+  box-shadow: 0 5px 5px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
 }
 
 table {
