--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -5,14 +5,29 @@
 
 .page,
 .post {
-  padding: 3rem;
-  margin: -3rem;
-  margin-bottom: 6rem;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  padding: 2rem;
+  margin: -2rem;
+  min-height: 8rem;
+  margin-bottom: 4rem;
+  // box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+  background-color: #ffffff;
+  transition: 0.3s;
+
+  &:hover {
+      box-shadow: 0 5px 5px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+  }
 
   li + li {
     margin-top: .25rem;
   }
+}
+
+.post-thumb {
+    max-height: 8rem;
+    max-width: 20%;
+    float: left;
+    margin-right: 3rem;
 }
 
 // Blog post or page title
