--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,5 +43,17 @@
        ga('send', 'pageview');
      </script>
     {% endif %}
+
+    <!-- Hotjar Tracking Code for https://slowkow.com -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:615325,hjsv:5};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
   </body>
 </html>
