--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,5 +55,16 @@
             a.appendChild(r);
         })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
+
+    <script>
+    if (
+      !window.location.host.startsWith("127.0.0.1") &&
+      !window.location.host.startsWith("localhost")) &&
+      window.location.protocol === "http:"
+    )
+    {
+      window.location.protocol = "https"
+    }
+    </script>
   </body>
 </html>
