fix syntax error

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
     <script>
     if (
       !window.location.host.startsWith("127.0.0.1") &&
-      !window.location.host.startsWith("localhost")) &&
+      !window.location.host.startsWith("localhost") &&
       window.location.protocol === "http:"
     )
     {
