--- a/themes/hugo-slowkow/layouts/partials/nav.html
+++ b/themes/hugo-slowkow/layouts/partials/nav.html
@@ -40,6 +40,6 @@
       <a class="link dim dark-gray f6 f5-ns dib" href="#" title="Contact">Join Us</a>
       -->
     </div>
-      <div class="ml2 dib moon"></div>
+    <!--<div class="ml2 dib moon"></div>-->
   </nav>
 </div>
