--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -38,9 +38,9 @@ body {
   background: linear-gradient(15deg, rgb(255, 248, 253) 0%, rgb(228, 242, 255) 100%) fixed;
   /*background: linear-gradient(0deg, rgb(240, 240, 240) 0%, rgb(248, 248, 248) 100%) fixed;*/
 }
-.lh-copy {
+/*.lh-copy {
   font-size: 1rem;
-}
+}*/
 
 .figure {
   box-shadow: 0px 0px 8px 0 rgba(0,0,0,.1);
@@ -111,7 +111,7 @@ pre code {
   transform: translate(0, 0px) scale(0.98);
 }*/
 
-.moon {
+/*.moon {
     z-index: -1;
     width: 900px;
     height: 900px;
@@ -120,7 +120,7 @@ pre code {
     position: absolute;
     right: 16px;
     top: 16px;
-}
+}*/
 
 kbd {
     display: inline-block;
