--- a/themes/hugo-slowkow/layouts/partials/footer.html
+++ b/themes/hugo-slowkow/layouts/partials/footer.html
@@ -24,6 +24,7 @@
     </div>
     {{ partial "footer_highlightjs" . }}
     {{ partial "footer_mathjax" . }}
-    {{ template "_internal/google_analytics.html" . }}
+    {{ partial "google_analytics.html" . }}
+    {{ partial "force_https.html" . }}
   </body>
 </html>
