--- a/themes/hugo-slowkow/layouts/partials/head.html
+++ b/themes/hugo-slowkow/layouts/partials/head.html
@@ -2,6 +2,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 {{ .Hugo.Generator }}
 
+<!-- favicon -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=rMqA4Grn37">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=rMqA4Grn37">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=rMqA4Grn37">
+<link rel="manifest" href="/site.webmanifest?v=rMqA4Grn37">
+<link rel="shortcut icon" href="/favicon.ico?v=rMqA4Grn37">
+<meta name="msapplication-TileColor" content="#2b5797">
+<meta name="theme-color" content="#ffffff">
+
+{{ if .Params.twitter }}
+{{ partial "twitter-card" . }}
+{{ end }}
+
 {{ if eq .URL "/" }}
 <title>{{ .Site.Title }}</title>
 <meta property="og:title" content="{{ .Site.Title }}">
