--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -134,3 +134,7 @@ kbd {
     border-radius: 3px;
     box-shadow: inset 0 -1px 0 #bbb;
 }
+
+.shadow-4 {
+    box-shadow: 0px 0px 120px 0 rgba(0, 0, 0, 0.02);
+}
