--- a/themes/hugo-slowkow/layouts/partials/footer.html
+++ b/themes/hugo-slowkow/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 
   <!-- <div class="w-100 ph3 pv5 center v-mid">-->
-	<nav class="mw8 tc center f5 ph3 pv3">
+	<nav class="mt7 mw8 tc center f5 ph3 pv3">
     <div class="ma3 pv3">
 
     <a class="link black-80 f5 ml3 pr2" href="{{ .Site.RSSLink | relURL }}" type="application/rss+xml" target="_blank">
