--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -138,3 +138,12 @@ kbd {
 .shadow-4 {
     box-shadow: 0px 0px 120px 0 rgba(0, 0, 0, 0.02);
 }
+/*.lh-copy {*/
+/*.lh-copy, p {
+    line-height: 1.5;
+    font-size: 1.2rem;
+}*/
+
+.br-02 {
+  border-radius: 2%;
+}
