--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -35,8 +35,7 @@ body {
     background-attachment: fixed;
 }*/
 .bg-gradient {
-  background: linear-gradient(15deg, rgb(255, 248, 253) 0%, rgb(228, 242, 255) 100%) fixed;
-  /*background: linear-gradient(0deg, rgb(240, 240, 240) 0%, rgb(248, 248, 248) 100%) fixed;*/
+  background: linear-gradient(15deg,#ffeeea42 0,#e4f2ff54 100%) fixed;
 }
 /*.lh-copy {
   font-size: 1rem;
