--- a/layouts/notes/list.html
+++ b/layouts/notes/list.html
@@ -2,7 +2,7 @@
 
 <main class="content" role="main">
 
-  <div class="shadow-4 bg-white br2 black-80 pa5-l pa4-m pa2 mw8 center br3">
+  <div class="bg-white br2 black-80 pa5-l pa4-m pa2 mw8 center br3">
 
     <h1 class="f1 mt0">{{ .Title }}</h1>
 
@@ -20,7 +20,7 @@
     <!-- <h2 class="baskerville fw1 ph3 ph0-l">{{ .Key }}</h2> -->
     {{ range .Pages }}
     <article class="pv2">
-      <div class="db pv4 ph3 ph0-l no-underline black hvr-shadow ba br3 ba b--black-10">
+      <div class="db pv4 ph3 ph0-l no-underline black">
         <div class="flex flex-column flex-row-ns pl3 pr3">
           <div class="note-thumb pr3-ns mb4 mb0-ns w-100 w-30-l">
             {{ if .Params.thumb }}
