--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,7 +1,7 @@
 
 <main class="pb3">
 
-  <article class="shadow-4 bg-white br2 black-80 pa5-l pa4-m pa2 mw8 center br3">
+  <article class="bg-white br2 black-80 pa5-l pa4-m pa2 mw8 center br3">
     <!--<article class="shadow-4 bg-white pa5-l pa4-m pa2 mw8 center br3">-->
 
     <div class="cf lh-copy">
