--- a/layouts/tags/list.html
+++ b/layouts/tags/list.html
@@ -2,7 +2,7 @@
 
 <main class="content" role="main">
 
-  <div class="shadow-4 bg-white br2 black-80 pa5-l pa4-m pa2 mw8 center br3">
+  <div class="bg-white br2 black-80 pa5-l pa4-m pa2 mw8 center br3">
 
     <h1 class="f1 mt0">{{ .Title }}</h1>
 
