--- a/themes/hugo-slowkow/layouts/_default/single.html
+++ b/themes/hugo-slowkow/layouts/_default/single.html
@@ -2,7 +2,7 @@
 
 <main class="pb3">
 
-  <article class="shadow-4 bg-white br2 black-80 pa5-l pa4-m pa2 mw8 center br3">
+  <article class="bg-white br2 black-80 pa5-l pa4-m pa2 mw8 center br3">
     <h1 class="f1 mt0">{{ .Title }}</h1>
 
     {{ if eq .Section "post" }}
