--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,7 +1,7 @@
 
 <main class="pb3">
 
-  <article class="bg-white br2 black-80 pa5-l pa4-m pa2 mw8 center br3">
+  <article class="bg-white br2 black-80 pa5-l pa4-m pa4 mw8 center br3">
     <!--<article class="shadow-4 bg-white pa5-l pa4-m pa2 mw8 center br3">-->
 
     <div class="cf lh-copy">
@@ -14,66 +14,23 @@
       <div class="fl w-100 w-60-l pl5-l">
         <h1 class="mt0">Welcome, I'm Kamil.</h3>
         <p>
-        I'm a PhD candidate in <a href="https://immunogenomics.hms.harvard.edu/">Soumya Raychaudhuri's lab</a>
-        at Harvard University.
-        As a computational biologist, my research is focused on the
-        analysis of functional genomics data such as RNA-seq.
-        I want to advance our understanding of how cells regulate different
-        functions in the context of disease and drug response.
-        I also build software tools for statistical tests and data
-        visualization, mostly with R and Javascript.
+          As a computational biologist, my research includes
+          analysis of functional genomics data such as RNA-seq.
+
+          I am interested to understand how cells regulate different
+          functions in the context of disease and drug response.
+
+          I also build software tools for statistical tests and data
+          visualization, mostly with R and Javascript.
         </p>
         <p>
-        If you'd like to learn more about my work, you can read my <a href="{{ "/publications" | relURL }}">publications</a>, check out my <a href="{{ "/projects" | relURL }}">projects</a>, or see my <a href="{{ "/notes" | relURL }}">notes</a>.
+          I completed my PhD training with <a href="{{ $.Site.Params.urls.soumya }}">Dr. Soumya Raychaudhuri</a> at Harvard University in collaboration with <a href="{{ $.Site.Params.urls.brenner }}">Dr. Michael B. Brenner</a> at Brigham and Women's Hospital.
         </p>
         <p>
-        <a class="link black-80 hvr-shadow bg-transparent inline-flex items-center ma2 br-pill ba b--black-10 pa2 pl3 pr3" href="/Slowikowski-CV-2018-10-10.pdf" title="CV">
-          {{ partial "pdf.svg" . }}
-          <span class="f5 ml2 pr1 fw5">Download CV</span>
-        </a>
-
-      <a class="link black-80 hvr-shadow  bg-transparent inline-flex items-center ma2 br-pill ba b--black-10 pa2 pl3" href="mailto:kslowikowski@gmail.com" title="LinkedIn">
-        {{ partial "email.svg" . }}
-      <span class="fw5 f5 ml2 pr2">Email</span>
-      </a>
-
+          Feel free to <a target="_blank" href="/Slowikowski-CV-2018-10-10.pdf" title="CV">download my CV</a> and <a target="_blank" href="mailto:kslowikowski@gmail.com" title="Email">email me</a>.
         </p>
       </div>
 
-    </div>
-
-    <p>
-    You can also find me on the web:
-    </p>
-
-    <!-- SVG Icons are from https://simpleicons.org -->
-    <div class="flex flex-wrap">
-        
-      <a class="link black-80 hvr-shadow bg-transparent inline-flex items-center ma2 br-pill ba b--black-10 pa2 pl3" href="https://github.com/slowkow" title="GitHub">
-        {{ partial "github.svg" . }}
-      <span class="fw5 f5 ml2 pr2">GitHub</span>
-      </a>
-
-      <a class="link black-80 hvr-shadow  bg-transparent inline-flex items-center ma2 br-pill ba b--black-10 pa2 pl3" href="https://scholar.google.com/citations?user=kMP4830AAAAJ" title="Google Scholar">
-        {{ partial "google-scholar.svg" . }}
-      <span class="fw5 f5 ml2 pr2">Google Scholar</span>
-      </a>
-      
-      <a class="link black-80 hvr-shadow  bg-transparent inline-flex items-center ma2 br-pill ba b--black-10 pa2 pl3" href="https://www.linkedin.com/in/kslowikowski" title="LinkedIn">
-        {{ partial "linkedin.svg" . }}
-      <span class="fw5 f5 ml2 pr2">LinkedIn</span>
-      </a>
-      
-      <a class="link black-80 hvr-shadow  bg-transparent inline-flex items-center ma2 br-pill ba b--black-10 pa2 pl3" href="https://beta.observablehq.com/@slowkow" title="Observable">
-        {{ partial "observable.svg" . }}
-      <span class="fw5 f5 ml2 pr2">Observable</span>
-      </a>
-      
-      <a class="link black-80 hvr-shadow  bg-transparent inline-flex items-center ma2 br-pill ba b--black-10 pa2 pl3" href="https://twitter.com/slowkow" title="Twitter">
-        {{ partial "twitter.svg" . }}
-      <span class="fw5 f5 ml2 pr2">Twitter</span>
-      </a>
-      
     </div>
   </article>
 
