--- a/themes/hugo-slowkow/layouts/partials/header.html
+++ b/themes/hugo-slowkow/layouts/partials/header.html
@@ -9,6 +9,7 @@
   -->
   <body class="{{ .Site.Params.mainFont }}">
     <div class="wrapper">
+      <!-- <header class="header bg-gradient"> -->
       <header class="header">
         {{ partial "nav.html" . }}
       </header>
