--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -27,7 +27,7 @@
           I completed my PhD training with <a href="{{ $.Site.Params.urls.soumya }}">Dr. Soumya Raychaudhuri</a> at Harvard University in collaboration with <a href="{{ $.Site.Params.urls.brenner }}">Dr. Michael B. Brenner</a> at Brigham and Women's Hospital.
         </p>
         <p>
-          Feel free to <a target="_blank" href="/Slowikowski-CV-2018-10-10.pdf" title="CV">download my CV</a> and <a target="_blank" href="mailto:kslowikowski@gmail.com" title="Email">email me</a>.
+        Feel free to <a target="_blank" href="/{{ .Site.Params.cv }}" title="CV">download my CV</a> and <a target="_blank" href="mailto:kslowikowski@gmail.com" title="Email">email me</a>.
         </p>
       </div>
 
