--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -70,7 +70,7 @@ p img {
   margin-left: auto;
   margin-right: auto;
   max-width: 80%;
-  box-shadow: 0px 0px 8px 0 rgba(0,0,0,.1);
+  /* box-shadow: 0px 0px 8px 0 rgba(0,0,0,.1); */
 }
 /*
 p img {
