--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,6 +6,14 @@ code {
   font-size: 90%;
 }
 
+.hline {
+  position: absolute;
+  left: 0%;
+  width: 99.9%;
+  border: 0;
+  border-top: 1px solid rgb(0,0,0,.2);
+}
+
 /* Shadow */
 .hvr-shadow {
   -webkit-transform: perspective(1px) translateZ(0);
@@ -65,7 +73,7 @@ h3:hover .heading-anchor {
   transition: .2s opacity;
   opacity: 1;
 }
-p img {
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -83,6 +91,7 @@ p img {
     margin-top: 3rem;
     margin-bottom: 3rem;
 }*/
+/*
 pre code {
   margin-left: auto;
   margin-right: auto;
@@ -92,6 +101,7 @@ pre code {
   margin-top: 0;
   margin-bottom: 1rem;
 }
+*/
 :not(pre)>code {
   color: #333333;
   vertical-align: middle;
@@ -99,6 +109,22 @@ pre code {
   border-radius: 3px;
   padding: 1px 5px;
   box-shadow: 0 1px 1px rgba(0,0,0,.125);
+}
+.highlight {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 85%;
+  padding-left: 1.2rem;
+  /* border: 1px solid #d3d3d3; */
+  border: 1px solid rgba(0,0,0,.2);
+  border-radius: 5px;
+  overflow: auto;
+}
+.highlight + .highlight {
+  border: none;
+  padding-top: 0px;
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .note-thumb {
