--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -77,7 +77,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 80%;
+  max-width: 90%;
   /* box-shadow: 0px 0px 8px 0 rgba(0,0,0,.1); */
 }
 /*
@@ -114,17 +114,39 @@ pre code {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 85%;
+  max-width: 90%;
   padding-left: 1.2rem;
   /* border: 1px solid #d3d3d3; */
   border: 1px solid rgba(0,0,0,.2);
   border-radius: 5px;
   overflow: auto;
 }
-.highlight + .highlight {
+/* .highlight + .highlight { */
+/* .language-fallback { */
+/*   border: none; */
+/*   padding-top: 0px; */
+/*   color: rgba(0, 0, 0, 0.7); */
+/* } */
+.language-fallback {
   border: none;
   padding-top: 0px;
-  color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.6);
+}
+.highlight + pre, pre + pre {
+  color: rgba(0,0,0,0.6);
+  background-color: rgba(0,0,0,0.03);
+  /* border-color: #00000026; */
+  /* border-width: 0px 1px 1px 1px; */
+  /* border-style: solid; */
+  margin-top:0em;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 89%;
+  padding-left: 1.2rem;
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+  overflow: auto;
 }
 
 .note-thumb {
