--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -12,22 +12,35 @@
           alt="{{ .Site.Params.logo.alt }}">
       </div>
       <div class="fl w-100 w-60-l pl5-l">
-        <h1 class="mt0">Welcome, I'm Kamil.</h3>
         <p>
-          As a computational biologist, my research includes
-          analysis of functional genomics data such as RNA-seq.
 
-          I am interested to understand how cells regulate different
-          functions in the context of disease and drug response.
+        Kamil Slowikowski is a computational biologist in
+        the <a href="https://www.massgeneral.org/medicine/ciid">Center for Immunology and Inflammatory Diseases</a> at Massachusetts
+        General Hospital, working as a postdoc under the mentorship of <a href="https://villani.mgh.harvard.edu/">Dr. Alexandra-Chloé Villani</a>
+        and <a href="http://lilab.mgh.harvard.edu/">Dr. Bo Li</a>.
 
-          I also build software tools for statistical tests and data
-          visualization, mostly with R and Javascript.
+        </p>
+
+        <p>
+        He received his PhD in Bioinformatics and Integrative
+        Genomics at Harvard under the mentorship of <a href="{{ $.Site.Params.urls.soumya }}">Dr. Soumya Raychaudhuri</a> at
+        the Department of Biomedical Informatics and in close collaboration
+        with <a href="{{ $.Site.Params.urls.brenner }}">Dr. Michael B. Brenner</a> at the Brigham and Women's Hospital.
+        </p>
+
+        <p>
+        Kamil
+        develops open-source computational software packages for single cell
+        RNA-seq data and genetics data. He also makes the primary data from biomedical
+        research accessible to everyone on the web through interactive
+        web apps.
+
         </p>
         <p>
-          I completed my PhD training with <a href="{{ $.Site.Params.urls.soumya }}">Dr. Soumya Raychaudhuri</a> at Harvard University in collaboration with <a href="{{ $.Site.Params.urls.brenner }}">Dr. Michael B. Brenner</a> at Brigham and Women's Hospital.
+        &#127891; <a target="_blank" href="/{{ .Site.Params.cv }}" title="CV">Download CV</a>
         </p>
         <p>
-        Feel free to <a target="_blank" href="/{{ .Site.Params.cv }}" title="CV">download my CV</a> and <a target="_blank" href="mailto:kslowikowski@gmail.com" title="Email">email me</a>.
+        &#128236; <a target="_blank" href="mailto:kslowikowski@gmail.com" title="Email">Email</a>
         </p>
       </div>
 
