--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -102,6 +102,9 @@ pre code {
   margin-bottom: 1rem;
 }
 */
+.tableofcontents {
+  box-shadow: 0px 2px 2px #d9d9d9;
+}
 :not(pre)>code {
   color: #333333;
   vertical-align: middle;
@@ -117,11 +120,14 @@ pre code {
   max-width: 90%;
   padding-left: 1.2rem;
   /* border: 1px solid #d3d3d3; */
-  border: 1px solid rgba(0,0,0,.2);
+  /* border: 1px solid rgba(0,0,0,.2); */
   border-radius: 5px;
   overflow: auto;
+  box-shadow: 0px 2px 2px #d9d9d9;
 }
-/* .highlight + .highlight { */
+.highlight + .highlight {
+  margin-top: 1em;
+}
 /* .language-fallback { */
 /*   border: none; */
 /*   padding-top: 0px; */
@@ -147,6 +153,7 @@ pre code {
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
   overflow: auto;
+  box-shadow: inset 0px 2px 5px #d9d9d9;
 }
 
 .note-thumb {
