--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,6 +5,7 @@
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&family=Noto+Sans+JP&family=Roboto&display=swap');
 </style>
+<script type="application/javascript" src="/js/medium-zoom.min.js"></script>
   </head>
   <!--
   <body class="bg-{{ .Site.Params.bgColor }} {{ .Site.Params.mainFont }}">
