--- a/layouts/notes/list.html
+++ b/layouts/notes/list.html
@@ -9,13 +9,7 @@
     {{ $page := $.Site.GetPage "/tags" }}
 
     <div class="pb0">
-      <p class="lh-copy">
-      Sometimes, I write notes to help my future self remember how to do things.
-      I hope some of them are helpful, and please feel free to contact
-      me if you have questions.
-      </p>
-      <p>See notes grouped by <a href="/archive/">date</a>.
-      </p>
+      <p class="lh-copy">{{ .Content }}</p>
     </div>
 
     {{ range .Pages }}
