--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -120,9 +120,9 @@ pre code {
 }
 */
 .tableofcontents {
-  box-shadow: 0px 2px 2px #d9d9d9;
-  background-color: white;
-  padding-right: 1em;
+  /* box-shadow: 0px 2px 2px #d9d9d9; */
+  /* background-color: white; */
+  /* padding: 1em; */
 }
 :not(pre)>code {
   color: #333333;
