--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -33,10 +33,10 @@
         to help researchers interpret RNA-seq data.
         </p>
         <p>
-        &#127891; <a target="_blank" href="/{{ .Site.Params.cv }}" title="CV">Download CV</a>
+        &#127891; <a rel="noopener" target="_blank" href="/{{ .Site.Params.cv }}" title="CV">Download CV</a>
         </p>
         <p>
-        &#128236; <a target="_blank" href="mailto:kslowikowski@gmail.com" title="Email">Email</a>
+        &#128236; <a rel="noopener" target="_blank" href="mailto:kslowikowski@gmail.com" title="Email">Email</a>
         </p>
       </div>
 
