--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -264,6 +264,7 @@ hr {
 .helvetica {
   /* font-family: 'Noto Sans JP', 'Fira Sans', 'Open Sans', arial, sans-serif; */
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-display: swap;
 }
 
 .table {
