--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -138,10 +138,11 @@ pre code {
 .highlight {
   background-color: #f0f0f0 !important;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  /* max-width: 90%; */
-  padding-left: 1.2rem;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+  /* padding-left: 1.2rem; */
+  margin: auto calc(1em * -1) 32px calc(1em * -1);
+  padding-left: 1em;
   /* border: 1px solid #d3d3d3; */
   /* border: 1px solid rgba(0,0,0,.2); */
   border-radius: 5px;
