--- a/layouts/notes/list.html
+++ b/layouts/notes/list.html
@@ -18,10 +18,18 @@
       <div class="db pv4 ph0-l no-underline black">
         <div class="flex flex-column flex-row-ns">
           <div class="note-thumb pr3-ns mb4 mb0-ns w-100 w-30-l">
-            {{ if .Params.thumb }}
+            {{ if .Params.mp4 }}
             <a href="{{ .RelPermalink }}">
               <div class="note-thumb-transition">
-              <img src="{{ .Params.thumb }}" class="db center">
+                <video width="100%" height="100%" autoplay loop>
+                  <source src="{{ .Params.mp4 }}" type="video/mp4">
+                </video>
+              </div>
+            </a>
+            {{ else if .Params.thumb }}
+            <a href="{{ .RelPermalink }}">
+              <div class="note-thumb-transition">
+                <img src="{{ .Params.thumb }}" class="db center">
               </div>
             </a>
             {{ end }}
