--- a/layouts/shortcodes/lastmod.html
+++ b/layouts/shortcodes/lastmod.html
@@ -1,1 +1,1 @@
-{{ dateFormat ( or $.Site.Params.dateFormat "2006, Jan 02" ) $.Page.Params.LastMod }}
+{{ dateFormat ( or $.Site.Params.dateFormat "2006-01-02" ) $.Page.Params.LastMod }}
