--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -141,7 +141,8 @@ pre code {
   /* margin-left: auto; */
   /* margin-right: auto; */
   /* padding-left: 1.2rem; */
-  margin: auto calc(1em * -1) 32px calc(1em * -1);
+  margin-left: calc(1em * -1);
+  margin-right: calc(1em * -1);
   padding-left: 1em;
   /* border: 1px solid #d3d3d3; */
   /* border: 1px solid rgba(0,0,0,.2); */
@@ -172,9 +173,9 @@ pre code {
   /* border-style: solid; */
   margin-top:0em;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 95%;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+  /* max-width: 95%; */
   padding-left: 1.2rem;
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
