--- a/layouts/_default/archive.html
+++ b/layouts/_default/archive.html
@@ -4,7 +4,7 @@
 
   <div class="bg-white br2 black-80 pa5-l pa4-m pa2 mw8 center br3">
 
-    <h1 class="f2 mt0">Archive</h1>
+    <h1 class="f2 mt0">Notes by date</h1>
 
     <div class="lh-copy">
 
