--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,8 +14,7 @@
     </div>
 
     <div class="tc p3 f6">
-      <p>This <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" rel="dct:type">work</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="{{ $.Site.Params.absurl }}" property="cc:attributionName" rel="cc:attributionURL">Kamil Slowikowski</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
-      <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" height="31" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a></p>
+      <p>&copy; 2024 Kamil Slowikowski</p>
     </div>
 
   </div>
