--- a/layouts/shortcodes/bluesky.html
+++ b/layouts/shortcodes/bluesky.html
@@ -1,1 +1,1 @@
-<a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/slowkow.com">{{ with .Get 0 }}{{ . }}{{ else }}@slowkow.com{{ end }}</a>
+<a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/slowkow.com">{{- with .Get 0 -}}{{- . -}}{{- else -}}@slowkow.com{{- end -}}</a>
